--- a/google/packages.config
+++ b/google/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="MarkdownSharp" version="1.13.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
+  <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="Selenium.Support" version="2.42.0" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="2.42.0" targetFramework="net45" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.10.0.0" targetFramework="net45" />
