--- a/google/google.csproj
+++ b/google/google.csproj
@@ -20,7 +20,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -80,6 +80,8 @@
     <Compile Include="features\step_definitions\SearchSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="test\pages\Search.cs" />
+    <Compile Include="test\utilities\RuntimeData.cs" />
+    <Compile Include="test\utilities\Hooks.cs" />
     <Compile Include="test\utilities\Driver.cs" />
   </ItemGroup>
   <ItemGroup>
