--- a/google/google.csproj
+++ b/google/google.csproj
@@ -44,15 +44,6 @@
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="RazorHosting">
-      <HintPath>..\packages\SimpleBrowser.0.5.42.0\lib\net40\RazorHosting.dll</HintPath>
-    </Reference>
-    <Reference Include="SimpleBrowser">
-      <HintPath>..\packages\SimpleBrowser.0.5.42.0\lib\net40\SimpleBrowser.dll</HintPath>
-    </Reference>
-    <Reference Include="SimpleBrowser.WebDriver">
-      <HintPath>..\packages\SimpleBrowser.WebDriver.0.5.27\lib\net40\SimpleBrowser.WebDriver.dll</HintPath>
-    </Reference>
     <Reference Include="SpecFlow.Reporting">
       <HintPath>..\packages\SpecFlow.Reporting.0.5.0.15\lib\net40\SpecFlow.Reporting.dll</HintPath>
     </Reference>
@@ -66,9 +57,6 @@
     </Reference>
     <Reference Include="WebDriver">
       <HintPath>..\packages\Selenium.WebDriver.2.42.0\lib\net40\WebDriver.dll</HintPath>
-    </Reference>
-    <Reference Include="WebDriver.Support">
-      <HintPath>..\packages\Selenium.Support.2.42.0\lib\net40\WebDriver.Support.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Choose>
@@ -89,8 +77,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>GoogleSearch.feature</DependentUpon>
     </Compile>
-    <Compile Include="test\GoogleSearch.cs" />
+    <Compile Include="features\step_definitions\SearchSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="test\pages\Search.cs" />
+    <Compile Include="test\utilities\Driver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
