--- a/google/google.csproj
+++ b/google/google.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="test\BusinessLayer\Search.cs" />
     <Compile Include="test\Pages\SearchPage.cs" />
+    <Compile Include="test\Utilities\FileUtils.cs" />
     <Compile Include="test\Utilities\VerificationFailures.cs" />
     <Compile Include="test\Utilities\CustomAsserts.cs" />
     <Compile Include="test\Utilities\PageUtils.cs" />
